macro(add_rtf_test testfile)
    add_test(NAME ${testfile} COMMAND   testrunner --verbose --test ${CMAKE_CURRENT_SOURCE_DIR}/${testfile})
endmacro()

macro(add_unit_test classname)
    set(testsrc ${classname}UnitTest.cpp)
    set(testbinary ${classname}UnitTest)
    set(testname   UnitTest${classname})
    add_executable(${testbinary} ${testsrc})
    target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
    target_link_libraries(${testbinary} idyntree-core-exp)
    add_test(NAME ${testname} COMMAND ${testbinary})
endmacro()

add_unit_test(Axis)
add_unit_test(Direction)
add_unit_test(PrivateUtils)
add_unit_test(SpatialAcc)
add_unit_test(SpatialInertia)
add_unit_test(Twist)
add_unit_test(Wrench)

if(IDYNTREE_USES_PYTHON)
    add_rtf_test(geometry.py)
endif()
